k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      name: edge-service
      labels:
        app: edge-service
      annotations:
        prometheus.io/scrape: "true" # 프로메테우스에게 이 파드에 있는 컨터에너로부터 데이터를 가져와야함을 알린다
        prometheus.io/path: /actuator/prometheus # 프로메테우스 메트릭을 제공하는 http 엔드포인트 지정
        prometheus.io/port: "9000" # 메트릭 엔드포인트 포트

    spec:
      containers:
        - name: edge-service
          image: edge-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9001
            initialDelaySeconds: 13
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9000
            initialDelaySeconds: 8
            periodSeconds: 15


          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]

          volumeMounts:
            - mountPath: /workspace/config
              name: edge-config-volume
      volumes:
        - name: edge-config-volume
          configMap:
            name: edge-config
