k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # 이 객체를 관리할 인그레스 컨트롤러 설정
  rules:
    - http: # http 트래픽에 대한 인그레스 규칙
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service # 요청 트래픽을 전달할 서비스 객체 이름
                port:
                  number: 80 # 트래픽을 전달할 서비스의 포트 번호
